# keen

./: .gitignore  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  TASKS.md  ci.yml  cloudbuild.yaml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_executive_summary_finding_type.py  003_add_flag_finding_type.py  004_add_user_id_to_engagements.py  005_add_documents_table.py  006_add_monitoring_and_transcripts.py  007_add_p4_p5_p7_p8_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/agents/: analysis.py  base.py  checkpoint.py  delivery.py  orchestrator.py  research.py
backend/app/api/: agents.py  auth_deps.py  chat.py  credentials.py  documents.py  engagements.py  external_records.py  health.py  leads.py  legal_findings.py  monitoring.py  primary_research.py  router.py  technical_dd.py  transcripts.py
backend/app/auth/: manager.py  vault.py
backend/app/compliance/: pii.py
backend/app/export/: __init__.py  excel.py  gsheets.py  pdf.py
backend/app/integrations/: __init__.py  base.py  crunchbase.py  hubspot.py  netsuite.py  salesforce.py  sec_edgar.py
backend/app/llm/: __init__.py  client.py  exceptions.py  prompts.py
backend/app/models/: __init__.py  agent_run.py  document.py  (+11 more)
backend/scripts/: test_connections.py
backend/tests/: conftest.py  test_engagements.py  test_health.py  test_leads.py  test_orchestrator.py
(+127 files in other folders)
